# controllers/user/profile/repository.go
@@ -60,20 +60,26 @@ func (r *repository) UpdateProfile(userID string, user *model.User) (*model.User
 		}
 		// Ensure correct field names are used for MongoDB document
 		correctFieldNames := bson.M{
-			"firstName":   user.FirstName,
-			"lastName":    user.LastName,
-			"phone":       user.Phone,
-			"address":     user.Address,
-			"birthday":    user.Birthday,
-			"gender":      user.Gender,
-			"nationality": user.Nationality,
-			"bio":         user.Bio,
-			"updatedAt":   time.Now(),
+			"firstName":          user.FirstName,
+			"lastName":           user.LastName,
+			"phone":              user.Phone,
+			"birthday":           user.Birthday,
+			"gender":             user.Gender,
+			"nationality":        user.Nationality,
+			"bio":                user.Bio,
+			"updatedAt":          time.Now(),
+			"profilePicture":     user.ProfilePicture,
+			"address.street":     user.Address.Street,
+			"address.city":       user.Address.City,
+			"address.state":      user.Address.State,
+			"address.postalCode": user.Address.PostalCode,
+			"address.country":    user.Address.Country,
 		}
 
 		// Update user profile with only the specified fields
 		_, err = r.db.Collection("users").UpdateByID(sc, userIDPrimitive, bson.M{"$set": correctFieldNames})
 		if err != nil {
+			fmt.Printf("Error updating user profile: %v", err)
 			return &UserProfileUpdateError{util.NewBaseError("USER_PROFILE_UPDATE_ERROR", "Profile update failed")}
 		}
 
@@ -93,56 +99,3 @@ func (r *repository) UpdateProfile(userID string, user *model.User) (*model.User
 
 	return &updatedUser, nil
 }
-
-// func (r *repository) UpdateProfile(userID string, user *model.User) (*model.User, error) {
-// 	// Start a session for transaction
-// 	session, err := r.db.Client().StartSession()
-// 	if err != nil {
-// 		return nil, err
-// 	}
-// 	defer session.EndSession(context.Background())
-
-// 	// Transaction handling
-// 	transactionErr := mongo.WithSession(context.Background(), session, func(sc mongo.SessionContext) error {
-// 		// Convert userID to primitive.ObjectID
-// 		userIDPrimitive, err := primitive.ObjectIDFromHex(userID)
-// 		if err != nil {
-// 			return &UserProfileUpdateError{util.NewBaseError("INVALID_USER_ID", "Invalid user ID format")}
-// 		}
-
-// 		// Check if user exists and retrieve current user data
-// 		var existingUser model.User
-// 		err = r.db.Collection("users").FindOne(sc, bson.M{"_id": userIDPrimitive}).Decode(&existingUser)
-// 		if err != nil {
-// 			if err == mongo.ErrNoDocuments {
-// 				return &UserProfileUpdateError{util.NewBaseError("USER_NOT_FOUND", "User not found")}
-// 			}
-// 			return err
-// 		}
-// 		// Ensure correct field names are used for MongoDB document
-// 		correctFieldNames := bson.M{
-// 			"firstName":   user.FirstName,
-// 			"lastName":    user.LastName,
-// 			"phone":       user.Phone,
-// 			"address":     user.Address,
-// 			"birthday":    user.Birthday,
-// 			"gender":      user.Gender,
-// 			"nationality": user.Nationality,
-// 			"bio":         user.Bio,
-// 		}
-
-// 		// Update user profile with only the specified fields
-// 		_, err = r.db.Collection("users").UpdateByID(sc, userIDPrimitive, bson.M{"$set": correctFieldNames})
-// 		if err != nil {
-// 			return &UserProfileUpdateError{util.NewBaseError("USER_PROFILE_UPDATE_ERROR", "Profile update failed")}
-// 		}
-
-// 		return nil
-// 	})
-
-// 	if transactionErr != nil {
-// 		return nil, transactionErr
-// 	}
-
-// 	return user, nil
-// }
